GET /results implemented
