# src/Controller/ApiResultsQueryController.php
@@ -1,0 +1,92 @@
+<?php
+
+namespace App\Controller;
+
+use App\Entity\Result;
+use App\Utility\Utils;
+use Doctrine\ORM\EntityManagerInterface;
+use JsonException;
+use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
+use Symfony\Component\HttpFoundation\Request;
+use Symfony\Component\HttpFoundation\Response;
+use Symfony\Component\Routing\Annotation\Route;
+
+use function in_array;
+
+/**
+ * Class ApiResultsController
+ *
+ * @package App\Controller
+ *
+ * @Route(
+ *     path=ApiResultsQueryInterface::RUTA_API,
+ *     name="api_results_"
+ * )
+ */
+class ApiResultsQueryController extends AbstractController implements ApiResultsQueryInterface
+{
+    private const HEADER_CACHE_CONTROL = 'Cache-Control';
+    private const HEADER_ETAG = 'ETag';
+    private const HEADER_ALLOW = 'Allow';
+
+    public function __construct(
+        private readonly EntityManagerInterface $entityManager
+    ) {
+    }
+
+    /**
+     * @see ApiResultsQueryInterface::cgetAction()
+     *
+     * @Route(
+     *     path=".{_format}/{sort?id}",
+     *     defaults={ "_format": "json", "sort": "id" },
+     *     requirements={
+     *         "sort": "id|email|roles",
+     *         "_format": "json|xml"
+     *     },
+     *     methods={ Request::METHOD_GET },
+     *     name="cget"
+     * )
+     *
+     * @throws JsonException
+     */
+    public function cgetAction(Request $request): Response
+    {
+        $format = Utils::getFormat($request);
+        if (!$this->isGranted('IS_AUTHENTICATED_FULLY')) {
+            return Utils::errorMessage( // 401
+                Response::HTTP_UNAUTHORIZED,
+                '`Unauthorized`: Invalid credentials.',
+                $format
+            );
+        }
+
+        $order = strval($request->get('sort'));
+        $results = $this->entityManager
+            ->getRepository(Result::class)
+            ->findBy([], [$order => 'ASC']);
+
+        // No hay resultados?
+        // @codeCoverageIgnoreStart
+        if (empty($results)) {
+            return Utils::errorMessage(Response::HTTP_NOT_FOUND, null, $format);    // 404
+        }
+        // @codeCoverageIgnoreEnd
+
+        // Caching with ETag
+        $etag = md5((string) json_encode($results, JSON_THROW_ON_ERROR));
+        if (($etags = $request->getETags()) && (in_array($etag, $etags) || in_array('*', $etags))) {
+            return new Response(null, Response::HTTP_NOT_MODIFIED); // 304
+        }
+
+        return Utils::apiResponse(
+            Response::HTTP_OK,
+            ['results' => array_map(fn ($u) =>  $u, $results)],
+            $format,
+            [
+                self::HEADER_CACHE_CONTROL => 'private',
+                self::HEADER_ETAG => $etag,
+            ]
+        );
+    }
+}
